syntax = "proto3";

package manifest;

enum SstableOp {
  INSERT = 0;
  DELETE = 1;
}

message SstableDiff {
  uint64 id = 1;
  uint64 level = 2;
  SstableOp op = 3;
  uint64 data_size = 4;
}

message VersionDiff {
  uint64 id = 1;
  repeated SstableDiff sstable_diffs = 2;
}

message SstableInfo {
  uint64 id = 1;
  uint64 data_size = 2;
}
